2013-09-06  Darshit Shah  <darnir@gmail.com>

	* main.c (option_data[]): Change option to metalink-file in accordance
	with the information in the documentation

2013-07-12  Giuseppe Scrivano  <gscrivano@gnu.org>

	* utils.c (run_with_timeout): abort when there are more threads.

2013-07-11  Tim Ruehsen  <tim.ruehsen@gmx.de>

        * gnutls.c (ssl_connect_wget): respect connect timeout.

2013-07-11  Tomas Hozza  <thozza@redhat.com>

	* ftp.c (ftp_loop): Use ftp_retrieve_glob() also in case
	--preserve-permissions was specified.

2013-03-20  Tomas Hozza  <thozza@redhat.com>

	* http.c (gethttp): Set "sock" to -1 if it's not and we have no
	persistent connection

2013-04-26  Tomas Hozza  <thozza@redhat.com> (tiny change)

	* log.c (redirect_output): Use DEFAULT_LOGFILE in diagnostic message
	when `logfile' is NULL.
	* utils.c (unique_create): Ensure `logfile' has always a value.

2013-06-26  Darshit Shah <darnir@gmail.com>

	* http.c (gethttp): Reverse change by commit 90896 that prevented
	downloading response body data to non-GET Request methods.

2013-06-19 Ciprian Vieru <devel.php@gmail.com> (tiny change)

        * html-url.c: Define TAG_TD, TAG_TH, TAG_VIDEO, TAG_AUDIO, TAG_SOURCE.
	(tag_url_attributes, known_tags): Likewise.

2013-06-23  Giuseppe Scrivano  <gscrivano@gnu.org>

	* http.c (PCONN_LOCK) [!ENABLE_THREADS]: Define.
	(PCONN_UNLOCK) [!ENABLE_THREADS]: Likewise.

	* http.c (gethttp): Lock access to `connect_to_host'.

2013-06-03  Jochen Hein  <jochen@jochen.org> (tiny change)

	* main.c (main): Remove double empty space from string.

2013-05-22  Bykov Aleksey <gnfalex@rambler.ru>

	* multi.c (merge_temp_files): Changed fopen mode from text to binary.
	* metalink.c (verify_file_hash): Likewise.

2013-05-21  Ray Satiro  <raysatiro@yahoo.com>

	* http.c (create_authorization_line): Fix syntax error in calls to NTLM
	functions.
	* url.c (url_file_name): Use MAX_PATH in Windows.

2013-05-19  Giuseppe Scrivano  <gscrivano@gnu.org>
